Finalize style choices, add vector art, prepare for content entry

--- a/flyer.html
+++ b/flyer.html
@@ -40,12 +40,6 @@
 <!--= STYLE RESOURCES
 =======================================================================-->
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/main.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/design_tests.css"> -->
 
 <!--= TOOLBAR FAVICON
 =======================================================================-->
@@ -127,9 +121,9 @@
                 <li class="nav__item">
                   <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
                 </li>
-                <li class="nav__item">
+                <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
-                </li>
+                </li> -->
                 <li class="nav__item">
                   <a href="flyer.html">Flyer</a>
                 </li>
@@ -141,7 +135,7 @@
     </aside>
 
     <!-- Main -->
-    <main class="layer-gradient--to-b">
+    <main class="layer-gradient--to-b flyer-main">
 
       <!-- Blurb -->
       <section id="blurb">
@@ -161,25 +155,25 @@
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">About me as a person</h2>
           </header>
-          <span class="grid__col--5">
+          <span class="grid__col--6">
             <ul class="icon-party">
               <li>
-                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+                <span class="fa fa-code icn--fntawsm advrt--un"></span>
               </li>
               <li>
-                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+                <span class="fa fa-wrench icn--fntawsm advrt--deux"></span>
               </li>
               <li>
-                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+                <span class="fa fa-film icn--fntawsm advrt--trois"></span>
               </li>
               <li>
-                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+                <span class="fa fa-gamepad icn--fntawsm advrt--quatre"></span>
               </li>
               <li>
-                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+                <span class="fa fa-rocket icn--fntawsm advrt--cinq"></span>
               </li>
               <li>
-                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+                <span class="fa fa-cutlery icn--fntawsm advrt--six"></span>
               </li>
             </ul>
           </span>
@@ -211,7 +205,7 @@
 
           <span class="grid__col--5">
             <span>
-              <img class="img--avatar" src="public/images/ali/SuitAndCape_Headshot-640x640.jpg" alt="">
+              <img class="img--avatar" src="public/images/ali/SuitAndCape_Headshot-400x400.jpg" alt="">
             </span>
           </span>
         </article>
@@ -237,21 +231,13 @@
         <article class="grid">
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">Projects</h2>
-          </header>
-        </article>
+          <!-- </header> -->
+<!--         </article>
 
-        <article class="grid">
-          <span class="grid__col--12">
-            <ul class="grid__col--12 panel--centered">
-              <li>
-                <form action="projects.html">
-                  <input type="submit" value="Projects Page" class="swtch--info bump">
-                </form>
-                <!-- <a href="#" class="button">Projects Page</a> -->
-              </li>
-            </ul>
-
-            <span class="grid__col--12 panel--centered">
+        <article class="grid"> -->
+          <!-- <span class="grid__col--12"> -->
+            <!-- <span class="grid__col--12 panel--centered"> -->
+            <span>
               <article class="grid__col--4">
                 <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
                 <h3>Project One</h3>
@@ -270,7 +256,18 @@
                 <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
               </article>
             </span>
-          </span>
+
+            <ul class="grid__col--12 panel--centered">
+              <li>
+                <form action="projects.html">
+                  <input type="submit" value="Projects Page" class="swtch--info bump">
+                </form>
+                <!-- <a href="#" class="button">Projects Page</a> -->
+              </li>
+            </ul>
+          <!-- </span> -->
+          </header>
+
         </article>
       </section>
     </main>
@@ -299,11 +296,11 @@
                 <span class="label">Github</span>
               </a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a href="https://dribbble.com/SuitAndCape" target="_blank" class="icon fav--dribbble">
                 <span class="label">Dribbble</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
