--- a/about.html
+++ b/about.html
@@ -40,12 +40,6 @@
 <!--= STYLE RESOURCES
 =======================================================================-->
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/main.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/design_tests.css"> -->
 
 <!--= TOOLBAR FAVICON
 =======================================================================-->
@@ -127,9 +121,9 @@
                 <li class="nav__item">
                   <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
                 </li>
-                <li class="nav__item">
+                <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
-                </li>
+                </li> -->
                 <li class="nav__item">
                   <a href="flyer.html">Flyer</a>
                 </li>
@@ -160,6 +154,9 @@
             </form>
             <form class="rdo--warm is-collapsed-mobile">
               <label for="slides_4">Tools</label>
+            </form>
+            <form class="rdo--warm is-collapsed-mobile">
+              <label for="slides_5">Gallery</label>
             </form> -->
             <label for="slides_1" class="rdo--warm is-collapsed-mobile">Blurb</label>
             <label for="slides_2" class="rdo--warm is-collapsed-mobile">Personal</label>
@@ -256,11 +253,11 @@
                 <span class="label">Github</span>
               </a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a href="https://dribbble.com/SuitAndCape" target="_blank" class="icon fav--dribbble">
                 <span class="label">Dribbble</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
