--- a/showcase-suitandcape.html
+++ b/showcase-suitandcape.html
@@ -40,12 +40,6 @@
 <!--= STYLE RESOURCES
 =======================================================================-->
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/main.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.min.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="public/css/design_tests.css"> -->
 
 <!--= TOOLBAR FAVICON
 =======================================================================-->
@@ -126,9 +120,9 @@
                 <li class="nav__item">
                   <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
                 </li>
-                <li class="nav__item">
+                <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
-                </li>
+                </li> -->
                 <li class="nav__item">
                   <a href="flyer.html">Flyer</a>
                 </li>
@@ -189,7 +183,7 @@
               <p class="para-primary"><strong>Currently Implemented</strong>:<br>HTML5, CSS3, Sass, JavaScript, jQuery, Elevator.js<br><br>
               <strong>Future Implementations</strong>:<br>Handlebars.js, RequireJS, Underscore.js, Hammer.js/jQuery Mobile Framework<br><br>
               <strong>Additional</strong>:<br>SMACCS, Mobile-First and Responsive Design, Design Tests, Personally Created All Major Features, No Sass Libraries<br><br>
-              <strong>Special Thanks</strong>:<br>Molly Allison-Baker, Hrag Chanchanian, Allan Enemark, Bekka Bjöke, Lam Nguyen</p>
+              <strong>Special Thanks</strong>:<br>Molly Allison-Baker, Hrag Chanchanian, Allan Enemark, Bekka Bjöke, Lam Nguyen, & William Bowers</p>
             </span>
           </header>
         </article>
@@ -279,11 +273,11 @@
                 <span class="label">Github</span>
               </a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a href="https://dribbble.com/SuitAndCape" target="_blank" class="icon fav--dribbble">
                 <span class="label">Dribbble</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
