--- a/flyer.html
+++ b/flyer.html
@@ -141,10 +141,10 @@
       <section id="blurb">
         <article class="grid">
           <header class="grid__col--12 panel--centered">
-            <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
-            <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
-            Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
-            Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+            <h2 class="headline-secondary--grouped">Allow me to introduce myself...</h2>
+            <p class="para-primary">I aim to create intuitive and minimalistic software.
+            <br>I build, I fiddle, and I embrace my playful curiosity – all of which help me to solve problems I have never encountered before.  There will always be a better alternative to boredom, and I endorse creativity and the pursuit of knowledge as reliable substitutes.
+            <br>I love having the freedom to choose the right tool for the job and the opportunity to expand my knowledge.</p>
           </header>
         </article>
       </section>
@@ -153,9 +153,9 @@
       <section id="personal">
         <article class="grid">
           <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">About me as a person</h2>
+            <h2 class="headline-secondary--grouped">We need to go deeper.</h2>
           </header>
-          <span class="grid__col--6">
+          <span class="grid__col--5">
             <ul class="icon-party">
               <li>
                 <span class="fa fa-code icn--fntawsm advrt--un"></span>
@@ -179,12 +179,9 @@
           </span>
 
           <span class="grid__col--6">
-            <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
-            I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
-            Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
-            I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
-            I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
-            I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
+            <p class="para-primary">I'm deeply and intensely curious about the "why," which is where my love for learning new skills and tools in a quick and effective manner stems from.
+            <br>One thing that I find inspiring and exciting is when something or someone has the ability to level the playing field – I'm especially interested in contributing to products and services that make high-quality education more accessible or that facilitate open communication and virtual community-building.
+            <br>Other interests include the film and video-game industries, physical sciences, fashion, design, and culinary arts.  If I can feel the passion behind it, it can probably catch my interest.</p>
           </span>
         </article>
       </section>
@@ -193,14 +190,15 @@
       <section id="experience">
         <article class="grid">
           <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">I have Experience in life</h2>
+            <h2 class="headline-secondary--grouped">Oh, the places you'll go!</h2>
           </header>
 
           <span class="grid__col--6">
-            <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
-            Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-            Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!<br>
-            LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
+            <p class="para-primary">I love to build.  I love to learn.  I love to share.  I love being a developer.
+            <br>I've worked on mobile apps, modular back-ends, and responsive websites; consistently, the most rewarding part of the development process is working on a product that people will not only want to use, but will also benefit from and enjoy using.
+            <br>My tech career began at <strong>Zvents</strong>, an event promotion website with a heavy emphasis on local groups businesses.  I managed thousands of event listings across the nation manually, through the site's CMS, and by monitoring automated iMacros.
+            <br>When the company was acquired by <strong>eBay</strong>, I was asked to stay on board and soon became a part of the <strong>StubHub</strong> family.  There, I maintained and enhanced the quality of content for events and venues appearing in StubHub’s music-tour app for Spotify andconcert app for the iPhone, StubHub Music.  I was appointed as project manager for three key projects that focused on internal content standards and task delegation.  Later, I assisted with various ad impressions and advertising projects.
+            <br>After I fully realized my passion to code, I began teaching myself more technical programming skills.  Shortly thereafter, I applied for and was admitted into the 19-week immersive coding school, <strong>Dev Bootcamp</strong>...</p>
           </span>
 
           <span class="grid__col--5">
@@ -215,13 +213,15 @@
       <section id="tools">
         <article class="grid">
           <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-            <h3 class="headline-tertiary">Digital</h3>
-            <p class="para-primary">Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework</p>
+            <h2 class="headline-secondary--grouped">He's got this ultimate set of tools.</h2>
+            <h3 class="headline-tertiary">Code</h3>
+            <p class="para-primary">Ruby, Rails, Sinatra, JavaScript, jQuery, AJAX, Angular, Ionic, HTML5, CSS3, Sass (SMACSS), ActiveRecord, PostgreSQL</p>
+            <h3 class="headline-tertiary">Software</h3>
+            <p class="para-primary">Ruby, Rails, Sinatra, JavaScript, jQuery, AJAX, Angular, Ionic, HTML5, CSS3, Sass (SMACSS), ActiveRecord, PostgreSQL</p>
             <h3 class="headline-tertiary">Physical</h3>
-            <p class="para-primary">Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered</p>
-            <h3 class="headline-tertiary">Other</h3>
-            <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
+            <p class="para-primary">Whiteboarding, Lab Techniques, Various Power Equipment, Woodwork, Wardrobe</p>
+            <h3 class="headline-tertiary">Practice</h3>
+            <p class="para-primary">Agile Development, Object-Oriented Design, Responsive Design, Deployment, UX, Wireframing, Reverse-Engineering, Coordinated Rhythmic Gyration Artist</p>
           </header>
         </article>
       </section>
@@ -231,14 +231,10 @@
         <article class="grid">
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">Projects</h2>
-          <!-- </header> -->
-<!--         </article>
-
-        <article class="grid"> -->
-          <!-- <span class="grid__col--12"> -->
-            <!-- <span class="grid__col--12 panel--centered"> -->
             <span>
-              <article class="grid__col--4">
+              <p class="para-primary">Content can be found on the Projects Page.  Preview comming soon.</p>
+
+              <!-- <article class="grid__col--4">
                 <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
                 <h3>Project One</h3>
                 <p class="para-primary">And we will never be alone again, 'Cause it doesn't happen every day</p>
@@ -254,7 +250,7 @@
                 <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_06.jpg" alt=""></a>
                 <h3>Project Three</h3>
                 <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
-              </article>
+              </article> -->
             </span>
 
             <ul class="grid__col--12 panel--centered">
@@ -265,7 +261,6 @@
                 <!-- <a href="#" class="button">Projects Page</a> -->
               </li>
             </ul>
-          <!-- </span> -->
           </header>
 
         </article>
