--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@
     </aside>
 
     <!-- Main -->
-    <main role="main" class="panel"></main>
+    <main role="main" class="layer-gradient--to-b">
+      <section>
+        <article class="grid">
+          <header class="grid__col--12 panel--centered">
+            <h2 class="headline-secondary--grouped">Allow me to introduce myself...</h2>
+            <p class="para-primary">I aim to create intuitive and minimalistic software.
+            <br>I build, I fiddle, and I embrace my playful curiosity – all of which help me to solve problems I have never encountered before.  There will always be a better alternative to boredom, and I endorse creativity and the pursuit of knowledge as reliable substitutes.
+            <br>I love having the freedom to choose the right tool for the job and the opportunity to expand my knowledge.</p>
+          </header>
+        </article>
+      </section>
+    </main>
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
