--- a/showcase-suitandcape.html
+++ b/showcase-suitandcape.html
@@ -205,7 +205,7 @@
             <div class="grid__col--12">
               <p class="para-primary">Throughout my "I work for the Internet" experience, I've had to learn a lot and I've had to learn it fast.  The most effective way of accomplishing this, has been to build with the most basic form of the technology in question to get a deeper understanding of why it works the way it does.  I whiteboarded the UX-workflow, wireframes, then decided on what tools to use.<br><br>
               This was the first time really working with Sass, so I decided to play with it on inferno-mode: use SMACCS methodologies with no frameworks or libraries (ie. Compass or Bourbon.io).  Any helpful function or mixin snippets that I found online, I made sure to fully understand how they work.<br><br>
-              I'm used to creating parallel back-end test suites, so because this project was really design heavy, I included a design-perspective test, which was highly beneficial to my mobile-first philosophy.  Through the power of pure CSS, I created sliders, modals, and other features that usually rely on JavaScript.</p>
+              I'm used to creating parallel back-end test suites, so because this project was really design heavy, I included a design-perspective test to assist my mobile-first philosophy.  Through the power of pure CSS, I created animated buttons, sliders, modals, and other features that usually rely on jQuery.</p>
             </div>
           </header>
         </article>
