Re-write content

--- a/about.html
+++ b/about.html
@@ -176,34 +176,31 @@
             <li class="overscroll">
               <header class="panel--centered">
                 <h2 class="headline-secondary--grouped">We need to go deeper.</h2>
-                <p class="para-primary">I'm deeply and intensely curious about the "why," which is where my love for learning new skills and tools in a quick and effective manner stems from.
-                <br>One thing that I find inspiring and exciting is when something or someone has the ability to level the playing field – I'm especially interested in contributing to products and services that make high-quality education more accessible or that facilitate open communication and virtual community-building.
-                <br>Other interests include the film and video-game industries, physical sciences, fashion, design, and culinary arts.  If I can feel the passion behind it, it can probably catch my interest.</p>
+                <p class="para-primary">I love to build.  I love to learn.  I love to share.  I love being a developer.</p>
+                <p class="para-primary">I'm deeply and intensely curious about the "why" of things, which is where my drive to learn new skills and tools comes from. I embrace my playful curiosity, which helps me solve problems I have never encountered before.</p>
+                <p class="para-primary">As an engineer, I aim to create intuitive and minimalistic software. I love having the freedom to choose the right tool for the job and the opportunity to expand my knowledge.</p>
+                <p class="para-primary">In my free time, I enjoy science, fashion, design, films, video games, and culinary arts.  If I can feel the passion behind it, it can probably catch my interest.</p>
               </header>
             </li>
 
             <li class="overscroll">
               <header class="panel--centered">
                 <h2 class="headline-secondary--grouped">Oh, the places you'll go!</h2>
-                <p class="para-primary">I love to build.  I love to learn.  I love to share.  I love being a developer.
-                <br>I've worked on mobile apps, modular back-ends, and responsive websites; consistently, the most rewarding part of the development process is working on a product that people will not only want to use, but will also benefit from and enjoy using.
-                <br>My tech career began at <strong>Zvents</strong>, an event promotion website with a heavy emphasis on local groups businesses.  I managed thousands of event listings across the nation manually, through the site's CMS, and by monitoring automated iMacros.
-                <br>When the company was acquired by <strong>eBay</strong>, I was asked to stay on board and soon became a part of the <strong>StubHub</strong> family.  There, I maintained and enhanced the quality of content for events and venues appearing in StubHub’s music-tour app for Spotify andconcert app for the iPhone, StubHub Music.  I was appointed as project manager for three key projects that focused on internal content standards and task delegation.  Later, I assisted with various ad impressions and advertising projects.
-                <br>After I fully realized my passion to code, I began teaching myself more technical programming skills.  Shortly thereafter, I applied for and was admitted into the 19-week immersive coding school, <strong>Dev Bootcamp</strong>...</p>
+                <p class="para-primary">I've worked on mobile apps, modular back-ends, and responsive websites.  I'm always excited when I'm working on a product that people will not only want to use, but will benefit from and enjoy using.</p>
+                <p class="para-primary">I am a graduate of <strong>Dev Bootcamp</strong>, a 19-week immersive coding program based in San Francisco.  During my training, I honed my coding skills in Ruby and JavaScript, while practicing Agile development and mobile-first design.  I also grew adept at learning how to learn: selecting the best technologies for a project and quickly becoming proficient with them.</p>
+                <p class="para-primary">Before that, I worked at <strong>Zvents</strong>, an event promotion startup.  I managed thousands of event listings across the nation, through the site's CMS and by monitoring automated iMacros.  When the company was acquired by <strong>eBay</strong>/<strong>StubHub</strong>, I joined their content team.  There, I worked on content for StubHub’s iPhone and Spotify apps.  I was appointed as project manager for three key projects that focused on internal content standards and task delegation.  It was during this time that I began to teach myself coding and became totally (and happily!) consumed by the programming gods.</p>
               </header>
             </li>
 
             <li class="overscroll">
               <header class="panel--centered">
                 <h2 class="headline-secondary--grouped">He's got this ultimate set of tools.</h2>
-                <h3 class="headline-tertiary">Code</h3>
-                <p class="para-primary">Ruby, Rails, Sinatra, JavaScript, jQuery, AJAX, Angular, Ionic, HTML5, CSS3, Sass (SMACSS), ActiveRecord, PostgreSQL</p>
-                <h3 class="headline-tertiary">Software</h3>
+                <h3 class="headline-tertiary">Digital</h3>
                 <p class="para-primary">Ruby, Rails, Sinatra, JavaScript, jQuery, AJAX, Angular, Ionic, HTML5, CSS3, Sass (SMACSS), ActiveRecord, PostgreSQL</p>
                 <h3 class="headline-tertiary">Physical</h3>
-                <p class="para-primary">Whiteboarding, Lab Techniques, Various Power Equipment, Woodwork, Wardrobe</p>
-                <h3 class="headline-tertiary">Practice</h3>
-                <p class="para-primary">Agile Development, Object-Oriented Design, Responsive Design, Deployment, UX, Wireframing, Reverse-Engineering, Coordinated Rhythmic Gyration Artist</p>
+                <p class="para-primary">Whiteboarding, Lab Techniques, Power Tools, Non-Powered Tools, Woodworking, Wardrobe</p>
+                <h3 class="headline-tertiary">Philosophical</h3>
+                <p class="para-primary">Agile Development, Object-Oriented Design, Responsive Design, Deployment, UX, Wireframing, Reverse-Engineering, Rhythmic Magical Flailing</p>
               </header>
             </li>
           </ul>
