Move Flyer Link, modify  what is contained in sections, remove header links to index from all but the Flyer page

--- a/about.html
+++ b/about.html
@@ -88,10 +88,7 @@
     <!-- Banner -->
     <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12">
-        <a href="index.html">
-          <h1 class="headline-primary--major">About</h1>
-          <!-- <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1> -->
-        </a>
+        <h1 class="headline-primary--major">About</h1>
       </div>
     </header>
 
@@ -124,9 +121,6 @@
                 <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
                 </li> -->
-                <li class="nav__item">
-                  <a href="flyer.html">Flyer</a>
-                </li>
               </ul>
             <!-- </div> -->
           <!-- </li>
@@ -176,11 +170,11 @@
             <li class="overscroll">
               <header class="panel--centered">
                 <h2 class="headline-secondary--grouped">We need to go deeper.</h2>
+              </header>
                 <p class="para-primary">I love to build.  I love to learn.  I love to share.  I love being a developer.</p>
                 <p class="para-primary">I'm deeply and intensely curious about the "why" of things, which is where my drive to learn new skills and tools comes from. I embrace my playful curiosity, which helps me solve problems I have never encountered before.</p>
                 <p class="para-primary">As an engineer, I aim to create intuitive and minimalistic software. I love having the freedom to choose the right tool for the job and the opportunity to expand my knowledge.</p>
                 <p class="para-primary">In my free time, I enjoy science, fashion, design, films, video games, and culinary arts.  If I can feel the passion behind it, it can probably catch my interest.</p>
-              </header>
             </li>
 
             <li class="overscroll">
@@ -250,6 +244,11 @@
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="flyer.html" class="icon fav--flyer">
+                <span class="label">Flyer</span>
               </a>
             </li>
           </ul>
