--- a/flyer.html
+++ b/flyer.html
@@ -124,9 +124,6 @@
                 <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
                 </li> -->
-                <li class="nav__item">
-                  <a href="flyer.html">Flyer</a>
-                </li>
               </ul>
             <!-- </div> -->
           <!-- </li>
@@ -296,6 +293,11 @@
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="flyer.html" class="icon fav--flyer">
+                <span class="label">Flyer</span>
               </a>
             </li>
           </ul>
