--- a/index.html
+++ b/index.html
@@ -88,10 +88,8 @@
     <!-- Banner -->
     <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12">
-        <a href="index.html">
-          <h1 class="headline-primary--major">Hi, my name is Ali Esmaili.</h1>
-          <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
-        </a>
+        <h1 class="headline-primary--major">Hi, my name is Ali Esmaili.</h1>
+        <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
       </div>
     </header>
 
@@ -124,9 +122,6 @@
                 <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
                 </li> -->
-                <li class="nav__item">
-                  <a href="flyer.html">Flyer</a>
-                </li>
               </ul>
             <!-- </div> -->
           <!-- </li>
@@ -169,6 +164,11 @@
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="flyer.html" class="icon fav--flyer">
+                <span class="label">Flyer</span>
               </a>
             </li>
           </ul>
