--- a/showcase-suitandcape.html
+++ b/showcase-suitandcape.html
@@ -88,9 +88,7 @@
     <!-- Banner -->
     <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12 centered">
-        <a href="index.html">
-          <h1 class="headline-primary--major">SuitAndCape</h1>
-        </a>
+        <h1 class="headline-primary--major">SuitAndCape</h1>
       </div>
     </header>
 
@@ -123,9 +121,6 @@
                 <!-- <li class="nav__item">
                   <a href="links.html">Links</a>
                 </li> -->
-                <li class="nav__item">
-                  <a href="flyer.html">Flyer</a>
-                </li>
               </ul>
             <!-- </div> -->
           <!-- </li>
@@ -281,6 +276,11 @@
             <li class="nav__item">
               <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="flyer.html" class="icon fav--flyer">
+                <span class="label">Flyer</span>
               </a>
             </li>
           </ul>
