--- a/about.html
+++ b/about.html
@@ -1,16 +1,16 @@
 <!-- about.html -->
 
 <!DOCTYPE html>
-<!--= IE BROWSER TARGETING
-=======================================================================-->
+<!-- IE Browser Targeting =============================================-->
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
   <head>
-<!--= BASIC PAGE INFO
-=======================================================================-->
+<!-- Basic Page Needs =================================================-->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Ali Esmaili | Web Developer | SuitAndCape</title>
@@ -22,8 +22,8 @@
     with a passion for dancing like an robot possessed.">
     <meta name="theme-color" content="#FFFFFF">
 
-<!--= OPEN GRAPH DATA
-=======================================================================-->
+<!-- Open Graph Data ==================================================-->
+
     <meta property="og:title" content="Ali Esmaili | Web Developer | SuitAndCape">
     <meta property="og:type" content="portfolio">
     <meta property="og:url" content="http://SuitAndCape.github.io/">
@@ -33,21 +33,21 @@
     with a passion for dancing like an robot possessed.">
     <meta property="og:site_name" content="Ali Esmaili | Web Developer | SuitAndCape">
 
-<!--= MOBILE SPECIFIC METAS
-=======================================================================-->
+<!-- Mobile Specific Metas ============================================-->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<!--= STYLE RESOURCES
-=======================================================================-->
+<!-- Style Resources ==================================================-->
+
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
 
-<!--= TOOLBAR FAVICON
-=======================================================================-->
+<!--## Favicons =======================================================-->
+
     <link rel="icon" type="image/png" href="public/images/favicons/toolbar-16x16.png">
   </head>
 
-<!--= DESIGN TESTS
-=======================================================================-->
+<!-- Design Tests =====================================================-->
+
     <!--===== Only uncomment for design testing =====-->
     <!-- <div class="design_test">
       <a class="test_button" href="javascript: (function() {
@@ -79,8 +79,8 @@
       }) ();">Restore Layout</a>
     </div> -->
 
-<!--= PRIMARY PAGE LAYOUT
-=======================================================================-->
+<!-- Primary Page Layout ==============================================-->
+
   <body class="case__about">
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
@@ -260,15 +260,15 @@
       </article>
     </footer>
 
-<!--= SCRIPTS
-=======================================================================-->
+<!-- Scripts ==========================================================-->
+
     <script type="text/javascript" src="public/js/jquery-2.1.3.js"></script>
     <script type="text/javascript" src="public/js/handlebars-v3.0.1.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
 
-<!--= GOOGLE ANALYTICS
-=======================================================================-->
+<!-- Google Analytics =================================================-->
+
     <script>
     //   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     //   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -278,8 +278,5 @@
     //   ga('create', 'UA-61163251-1', 'auto');
     //   ga('send', 'pageview');
     </script>
-
-<!--= END OF DOCUMENT
-=======================================================================-->
   </body>
 </html>
