docs(resume): update résumé

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- index.html -->
 
 <!DOCTYPE html>
+
 <!-- IE Browser Targeting =============================================-->
 
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -8,42 +9,43 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
-  <head>
 <!-- Basic Page Needs =================================================-->
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Ali Esmaili | Software Engineer &amp; Web Developer | SuitAndCape</title>
-    <meta name="author" content="Ali Esmaili">
-    <link rel="author" type="text/plain" href="humans.txt">
-    <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, Handlebars, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Software, Engineer, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF, portfolio, OurHouse, Doppl, UpAhead">
+    <meta name="author" content="Ali Esmaili" />
+    <link rel="author" type="text/plain" href="humans.txt" />
+    <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, Handlebars, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Software, Engineer, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF, portfolio, OurHouse, Doppl, UpAhead" />
     <meta name="description" content="Ali Esmaili is a web
     developer, UI designer, Ruby and JavaScript enthusiast,
-    with a passion for dancing like an robot possessed.">
-    <meta name="theme-color" content="#FFFFFF">
+    with a passion for dancing like an robot possessed." />
+    <meta name="theme-color" content="#FFFFFF" />
 
 <!-- Open Graph Data ==================================================-->
 
-    <meta property="og:title" content="Ali Esmaili | Software Engineer &amp; Web Developer | SuitAndCape">
-    <meta property="og:type" content="portfolio">
-    <meta property="og:url" content="http://SuitAndCape.github.io/">
-    <meta property="og:image" content="http://suitandcape.github.io/public/images/ogi/open_graph_image.jpg">
+    <meta property="og:title" content="Ali Esmaili | Software Engineer &amp; Web Developer | SuitAndCape" />
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:url" content="https://SuitAndCape.github.io/" />
+    <meta property="og:image" content="https://suitandcape.github.io/public/images/ogi/open_graph_image.jpg" />
     <meta property="og:description" content="Ali Esmaili is a web
     developer, UI designer, Ruby and JavaScript enthusiast,
-    with a passion for dancing like an robot possessed.">
-    <meta property="og:site_name" content="Ali Esmaili | Software Engineer &amp; Web Developer | SuitAndCape">
+    with a passion for dancing like an robot possessed." />
+    <meta property="og:site_name" content="Ali Esmaili | Software Engineer &amp; Web Developer | SuitAndCape" />
 
 <!-- Mobile Specific Metas ============================================-->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <!-- Style Resources ==================================================-->
 
-    <link rel="stylesheet" type="text/css" href="public/css/main.css">
+    <link rel="stylesheet" type="text/css" href="public/css/main.css" />
 
-<!--## Favicons =======================================================-->
+<!-- Favicons =========================================================-->
 
-    <link rel="icon" type="image/png" href="public/images/favicons/toolbar-16x16.png">
+    <link rel="icon" type="image/png" href="public/images/favicons/fabicon-16x16.png" />
   </head>
 
 <!-- Design Tests =====================================================-->
@@ -82,8 +84,9 @@
 <!-- Primary Page Layout ==============================================-->
 
   <body class="case__home">
-    <!--[if lt IE 8]>
-      <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
+  <!--[if lt IE 8]>
+    <p class="sad-browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p>
+  <![endif]-->
 
     <!-- Banner -->
     <header role="banner" id="banner" class="grid panel--main--centered">
@@ -174,7 +177,7 @@
           </ul>
 
           <ul class="copyright panel">
-            <li>&copy; Ali Esmaili</li>
+            <li>&copy; Ali Esmaili | SuitAndCape</li>
           </ul>
         </nav>
       </article>
