refact(background): Have the background change at 922px breakpoint

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       <a href="https://www.twitter.com/SuitAndCape" class="icon-social-twitter" target="_blank" aria-label="My Twitter Profile"></a>
     </nav>
     <header class="banner" role="banner">
-      <h1>Hi, my name is Ali Esmaili.</h1>
-      <h3>I'm a full-stack developer, with a penchant for creating &amp; tinkering.</h3>
+      <h2>Hi, my name is</h2>
+      <h2>Ali Esmaili</h2>
     </header>
 
     <main class="principal">
       <section class="blurb">
-        <p>I aim to create intuitive &amp; minimalistic software.  I'm a full-stack web developer who graduated from Dev Bootcamp SF, &amp; loves to learn new skills quickly &amp; implement them efficiently.  Prior to my training at Dev Bootcamp, I spent five years at eBay Inc. (StubHub), as a Senior Content Analyst &amp; Product Support Specialist, a role which allowed me many opportunities to expand my leadership &amp; technical skills.</p>
+        <p>I aim to create intuitive &amp; minimalistic software.  I'm a full-stack web developer who graduated from Dev Bootcamp SF, with a penchant for creating &amp; tinkering, &amp; loves to learn new skills quickly &amp; implement them efficiently.  Prior to my training at Dev Bootcamp, I spent five years at eBay Inc. (StubHub), as a Senior Content Analyst &amp; Product Support Specialist, a role which allowed me many opportunities to expand my leadership &amp; technical skills.</p>
       </section>
 
       <section class="skillset">
